<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Copyright (c) 2014, 2023, Marcus Hirt, Miroslav Wengner
  ~
  ~ Robo4J is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Robo4J is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Robo4J. If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.robo4j</groupId>
    <artifactId>robo4j-parent</artifactId>
    <version>0.5-SNAPSHOT</version>
    <name>Robo4j - Parent POM</name>
    <url>https://www.robo4j.io</url>
    <modules>
        <module>robo4j-core</module>
        <module>robo4j-hw-lego</module>
        <module>robo4j-hw-rpi</module>
        <module>robo4j-math</module>
        <module>robo4j-socket-http</module>
        <module>robo4j-units-lego</module>
        <module>robo4j-units-rpi</module>
        <module>robo4j-units-rpi-http</module>
    </modules>
    <packaging>pom</packaging>

    <organization>
        <name>Robo4j</name>
        <url>https://www.robo4j.io</url>
    </organization>


    <licenses>
        <license>
            <name>GNU General Public License - version 3.0</name>
            <url>http://www.gnu.org/licenses</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>hirt</id>
            <name>Markus Hirt</name>
            <email>marcus@robo4j.io</email>
            <url>http://hirt.se/</url>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>mirage22</id>
            <name>Miro Wengner</name>
            <email>miro@robo4j.io</email>
            <url>https://www.wengnermiro.com/</url>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <issueManagement>
        <url>https://github.com/Robo4J/robo4j/issues</url>
        <system>github</system>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>sonatype-oss-staging</id>
            <name>Sonatype Open Source Maven Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-oss-snapshots</id>
            <name>Sonatype Open Source Maven Snapshots Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>oss-snapshots-repo</id>
            <name>Sonatype OSS Maven Repository</name>
            <url>https://oss.sonatype.org/content/groups/public</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <properties>
        <java.version>11</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.release.plugin.version>3.0.1</maven.release.plugin.version>
        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.1.2</maven.surefire.plugin.version>
        <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
        <maven.source.plugin.version>3.3.0</maven.source.plugin.version>
        <maven.resource.plugin.version>3.3.1</maven.resource.plugin.version>
        <pi4j.version>2.3.0</pi4j.version>

        <!-- Test -->
        <junit.jupiter.version>5.10.0</junit.jupiter.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Robo4j -->
            <dependency>
                <groupId>com.robo4j</groupId>
                <artifactId>robo4j-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.robo4j</groupId>
                <artifactId>robo4j-math</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.robo4j</groupId>
                <artifactId>robo4j-hw-rpi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.robo4j</groupId>
                <artifactId>robo4j-units-rpi</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.robo4j</groupId>
                <artifactId>robo4j-socket-http</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.robo4j</groupId>
                <artifactId>robo4j-hw-lego</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>${basedir}</directory>
                <filtering>false</filtering>
                <includes>
                    <include>LICENSE.txt</include>
                    <include>README.md</include>
                </includes>
            </resource>
        </resources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven.release.plugin.version}</version>
                    <configuration>
                        <tagNameFormat>release/@{project.version}</tagNameFormat>
                        <pushChanges>false</pushChanges>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <arguments>-Drelease-build</arguments>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <verbose>false</verbose>
                        <compilerArgs>
                            <arg>-Xlint:deprecation</arg>
                            <arg>-Xlint:unchecked</arg>
                            <arg>-Xlint:rawtypes</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <excludes>
                            <exclude>**/*ExcludeTest.java</exclude>
                        </excludes>
                        <systemPropertyVariables>
                            <java.net.preferIPv4Stack>true</java.net.preferIPv4Stack>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven.resource.plugin.version}</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>